# pythiags-dev

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO  logs.txt  pyproject.toml  requirements.codequality.txt  requirements.dev.txt  requirements.txt  setup.py  wip.py
.devcontainer/: .Dockerfile  devcontainer.json  setup-build-args
.github/: PULL_REQUESTS_TEMPLATE.md  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md  pythiags_dev_merge.md
.github/workflows/: bump.yml  ci.yml  cleanup.yml  code-quality.yml  codestyle.yml.bkp  deepstream-jetson.yml  docs.yml  fetch-pythiags-dev-from-pythiags.yml  force-push-pythiags-to-pythiags-dev.yml  jetson.yml.bkp  pr-pythiags-dev-on-pythiags-master-push.yml  release-info.yml  release.yml
.scripts/: README.md  docker-build.py  docs-build.sh  docs-deploy.py  export-dev-reqs.sh  export-reqs.sh  install-poetry.sh  pytest_parser.py
docker/: .env.dist  Dockerfile  arm64.Dockerfile  docker-compose.yml  trt-oss-install.sh  ubuntu-cross-aarch64.Dockerfile  x86-trt-oss.Dockerfile
docs/: README_.md  conf.py  development.md  index.md
docs/_static/css/: pytest-html.css
docs/development/: contributing.md  pytest_.rst
docs/src/: conf.py  coverage.rst  examples.rst  index.rst  tests.rst  tutorial.rst
docs/src/templates/: toc.rst_t
docs/templates/: page.html  toc.rst_t
reqs/: README.md  apt.build.list  apt.devcontainer.list  apt.dpa.list  apt.runtime.list
scripts/: docker.py  docs  export-reqs  format  lint  stubs  test
setup/: aptitude.build.list  aptitude.docs.list  aptitude.kivy.list  aptitude.run.list
setup/reference/: aptitude.list
src/pythia/: __init__.py  __main__.py  api.py  app.py  background.py  cli.py  consumer.py  deepstream_config_parsing.py  detections.py  events.py  exc.py  exceptions.py  headless.py  iterators.py  models.py  paths.py  perf.py  pipeline.py  producer.py  types.py  utils.py  version.py  video.py
src/pythia/applications/: annotation.py  base.py  command_line.py  demo.py
src/pythia/cli/: app.py
src/pythia/deepstream/: config_parsing.py  iterators.py  metadata_producers.py  parsers.py
src/pythia/event_stream/: __init__.py  base.py  kafka.py  log.py  memory.py  redis.py
src/pythia/models/: base.py
src/pythia/pipelines/: __init__.py  base.py
src/pythia/utils/: __init__.py  ds.py  ext.py  gst.py  maskrcnn.py  message_handlers.py  str2pythia.py
src/pythiags/: __init__.py  __main__.py  _setup.py  api.py  app.py  background.py  cli.py  consumer.py  events.py  exc.py  headless.py  kivy_app.py  models.py  producer.py  stateful.py  types.py  utils.py  video.py
src/pythiags/deepstream/: config_parsing.py  iterators.py  metadata_producers.py  parsers.py
src/pythiags/recorder/: __init__.py  record_bin.py  recorder.py  ring_buffer.py
stubs/: pyds.pyi
stubs/cv2/: __init__.pyi
stubs/fire/: core.pyi  decorators.pyi
stubs/kafka/: __init__.pyi  admin.pyi
tests/: __init__.py  conftest.py  paths.py  test_meta.py  test_system.py  utils.py
tests/bdd/: __init__.py  environment.py
tests/bdd/features/: detections.feature  kivymwe.feature  pygstlaunch.feature  tutorial.feature  video_recorder.feature
tests/bdd/steps/: detections.py  kivymwe.py  pygstlaunch.py  video_recorder.py
tests/fixture_data/configs/: analytics.conf
tests/fixture_data/pipelines/: 0_gst_minimal  10_ds_single_stream_nvinfer_b2b_tracker_tiler.gpu  10_ds_single_stream_nvinfer_b2b_tracker_tiler.jetson  10_ds_single_stream_nvinfer_b2b_tracker_tiler.skip  11_ds_multi_stream_nvinfer_b2b_tracker_tiler.gpu  11_ds_multi_stream_nvinfer_b2b_tracker_tiler.jetson  11_ds_multi_stream_nvinfer_b2b_tracker_tiler.skip  12_nvinfer_people  1_gst_minimal_identity  2_ds_glessink  2_ds_glessink_hw.gpu  2_ds_glessink_hw.jetson  3_gst_cacasink  4_minimal_nvinfer_jpeg  5_ds_nvinfer  6_ds_multi_stream_fakesink  nvinfer_people.gstp
tests/fixture_data/probes/: json_probe.py
tests/fixtures/: pipeline_nvinfer.gstp  sample_parser.py
tests/fixtures/ds_pipelines/: 1_video  2_single_stream  3_multistream
tests/fixtures/gst_pipelines/: 0_minimal  1_video
tests/meta/: test_meta.py  test_system.py
tests/pytest/: conftest.py
tests/pytest/a_meta/: test_imports.py  test_pipelines_fixtures.py
tests/pytest/b_unit/cli/: parse_extractors_from_cli_test.py
tests/pytest/c_integration/: annotators_test.py  demo_uri_test.py  gst_pylaunch_test.py  minimal_application_test.py  probe_decorator_test.py  probe_json_test.py  producers_test.py  readme_test.py
tests/pytest/integration/: demo_uri_test.py  gst_pylaunch_test.py  minimal_pipeline_test.py  probe_json_test.py  producers_test.py  test_demo_uri.py  test_probe_decorator.py  test_readme.py
tests/pytest/meta/: test_imports.py
tests/pytest/unit/cli/: parse_extractors_from_cli_test.py
tests/unit/: test_cli.py  test_kivy_app.py  test_pythia.py
